# infrastructure_demos

./: .gitignore  LICENSE  README.md
minikube_basic_setup/: .envrc  .gitignore  .terraform.lock.hcl  README.md  cluster.tf  deployments.tf  minikube.config  minikube_config.tftpl  outputs.tf  providers.tf  terraform.tfvars  variables.tf
minikube_istio/: README.md
minikube_openservicemesh/: README.md
minikube_terraform_docker/: README.md
pulumi_basic_nginx/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  requirements.txt
terraform_basic_nginx/: README.md  main.tf
terraform_flask_app/: README.md  requirements.txt  setup.sh  webapp.dockerfile  webapp.tf
terraform_flask_app/webapp/: webapp.ini
terraform_flask_app/webapp/webapp/: app.py  ep_static.py
terraform_flask_app/webapp/webapp/css/: index.css
terraform_flask_app/webapp/webapp/templates/: index.mustache
terraform_localstack/: .envrc  .gitignore  README.md  pyproject.toml
terraform_localstack/example_ec2_ubuntu/: ami.tf  backend.tf  ec2.tf  iam.tf  iam_users.tf  outputs.tf  terraform.tf  terraform.tfvars  variables.tf
terraform_localstack/example_s3/: variables.tf
